task-03-require-run-as-non-root/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-root
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
