task-03-require-run-as-non-root/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-nonroot
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: nginx
      image: nginx:1.25
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
